[package]
name = "drop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = ["full"] }
async-trait = "^0.1"
futures = "^0.3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
bytes = "^1"
sha2 = "^0.10"
aes-gcm = "^0.10"
rand = "^0.8"
thiserror = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
anyhow = "^1"

# For WebRTC support
webrtc = "^0.9"

# For BLE support
btleplug = "^0.11"

# For file operations
walkdir = "^2"
indicatif = "^0.17"  # For progress bars
