[package]
name = "drop_backend"
version = "0.1.0"
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] # Ensuring this is a library, potentially for FFI later
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-web = "4"
dashmap = "5.5"
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
# We might need these later for NFC/BLE, but let's hold off for now to keep it simple
# bluer = "0.16" # For BLE on Linux
# windows-ble = "0.2" # For BLE on Windows
# nfc-sys = "0.1" # Low-level NFC bindings, platform-specific

async-trait = "^0.1"
futures = "^0.3"
serde_json = "^1"
bytes = "^1"
sha2 = "^0.10"
aes-gcm = "^0.10"
rand = "^0.8"
thiserror = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
anyhow = "^1"

# For WebRTC support
webrtc = "^0.9"

# For BLE support
btleplug = "^0.11"

# For file operations
walkdir = "^2"
indicatif = "^0.17"  # For progress bars
